--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -1,5 +1,5 @@
 nav.navbar.navbar-toggleable-sm.fixed-top
-    .container.px-0
+    .container.w-100
         button.navbar-toggler.navbar-toggler-right(type='button' data-toggle='collapse' data-target='#navbarSupportedContent')
           span
           span
@@ -16,6 +16,6 @@ nav.navbar.navbar-toggleable-sm.fixed-top
             li.nav-item
               a.nav-link(href='/whats-new') What's new
           form.form-inline.my-2.my-lg-0.ml-md-3
-            a.btn.btn-outline-secondary.my-2.my-sm-0.mr-3.ml-md-3(href='https://app.checklyhq.com/login') Log in
-            a.btn.btn-success.my-2.my-sm-0(href='https://app.checklyhq.com/signup') Start a free trial
+            a.btn.btn-outline-secondary.my-2.my-sm-0.mr-3.ml-md-3(href='https://app.checklyhq.com/') Log in
+            a.btn.btn-success.my-2.my-sm-0(href='https://app.checklyhq.com/signup') Start your free trial
 
