--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -5,88 +5,142 @@ body
         .plans.py-5
             .container
                 .row
-                    .col-sm-12.plans-header
+                    .col-sm-12.plans-header.text-center.mb-3
                         h2 Simple, fair pricing
                         p Find the perfect plan — 100% satisfaction guaranteed 🍍
                 .row
-                    .col-sm-12
-                        .plans-table.d-block
-                            .card-deck
+                    .col-sm-4
+                        .card.p-3.mb-3.mb-md-0
+                            .card-block
+                                h2.text-accent Starter
+                                .price-block
+                                    span.dollar-sign $
+                                    span.price 15
+                                    | / month
+                                p.py-3 Start actively monitoring your site, api's and mobile back end. Add up to 5 team mates.
+                                a.btn.btn-outline-success.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
+                        .card.border-0
+                            .card-block
+                                table.table.plans-features-table
+                                    tr
+                                        td 15 API checks
+                                    tr
+                                        td 5 Browser checks
+                                    tr
+                                        td 5 Team members
+                                    tr
+                                        td 8 regions
+                                    tr
+                                        td 5 minute schedules
+                                    tr
+                                        td Email, webhook and <br> Slack integration
+                    .col-sm-4
+                        .card.p-3.mb-3.mb-md-0
+                            .card-block
+                                h2.text-success Growth
+                                .price-block
+                                    span.dollar-sign $
+                                    span.price 40
+                                    | / month
+                                p.py-3  More checks and more team mates for growing companies with multiple services and API's.
+                                a.btn.btn-outline-success.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
+                        .card.border-0
+                            .card-block
+                                table.table.plans-features-table
+                                    tr
+                                        td 40 API checks
+                                    tr
+                                        td 15 Browser checks
+                                    tr
+                                        td 10 Team members
+                                    tr
+                                        td 8 regions
+                                    tr
+                                        td 5 minute schedules
+                                    tr
+                                        td Email, webhook and <br> Slack integration
+                    .col-sm-4
+                        .card.p-3.mb-3.mb-md-0
+                            .card-block
+                                h2.text-primary Business
+                                .price-block
+                                    span.dollar-sign $
+                                    span.price 80
+                                    | / month
+                                p.py-3  For businesses with extensive API landscapes and many key online transactions.
+                                a.btn.btn-outline-success.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
+                        .card.border-0
+                            .card-block
+                                table.table.plans-features-table
+                                    tr
+                                        td 100 API checks
+                                    tr
+                                        td 30 Browser checks
+                                    tr
+                                        td 20 Team members
+                                    tr
+                                        td 8 regions
+                                    tr
+                                        td 5 minute schedules
+                                    tr
+                                        td Email, webhook and <br> Slack integration
 
-                                // Starter
-
-                                .card.plans-card
-                                    .card-header.text-center
-                                        h5.text-accent Starter
-                                        .price-block
-                                            span.dollar-sign $
-                                            span.price 15
-                                            | / mo
-                                    .card-block.text-center
-                                        table.table.text-left
-                                            tr
-                                                td 15 API checks
-                                            tr
-                                                td 5 Browser checks
-                                            tr
-                                                td 8 regions
-                                            tr
-                                                td 5 minute schedules
-                                            tr
-                                                td Email, webhook and <br> Slack integration
-
-                                    .card-footer.text-center
-                                        a.btn.btn-success(href='https://app.checklyhq.com/signup') Free 15-day trial
-
-                                // Growth
-
-                                .card.plans-card
-                                    .card-header.text-center
-                                        h5.text-success Growth
-                                        .price-block
-                                            span.dollar-sign $
-                                            span.price 40
-                                            | / mo
-                                    .card-block.text-center
-                                        table.table.text-left
-                                            tr
-                                                td 40 API checks
-                                            tr
-                                                td 15 Browser checks
-                                            tr
-                                                td 8 regions
-                                            tr
-                                                td 5 minute schedules
-                                            tr
-                                                td Email, webhook and <br> Slack integration
-
-                                    .card-footer.text-center
-                                        a.btn.btn-success(href='https://app.checklyhq.com/signup') Free 15-day trial
-
-                                // Business
-
-                                .card.plans-card
-                                    .card-header.text-center
-                                        h5.text-primary Business
-                                        .price-block
-                                            span.dollar-sign $
-                                            span.price 80
-                                            | / mo
-                                    .card-block.text-center
-                                        table.table.text-left
-                                            tr
-                                                td 100 API checks
-                                            tr
-                                                td 30 Browser checks
-                                            tr
-                                                td 8 regions
-                                            tr
-                                                td 5 minute schedules
-                                            tr
-                                                td Email, webhook and <br> Slack integration
-
-                                    .card-footer.text-center
-                                        a.btn.btn-success(href='https://app.checklyhq.com/signup') Free 15-day trial
+                        //.d-block
+                        //    .card-deck
+                        //
+                        //        // Starter
+                        //
+                        //        .card.border-0
+                        //            .card-block
+                        //                table.table.plans-features-table
+                        //                    tr
+                        //                        td 15 API checks
+                        //                    tr
+                        //                        td 5 Browser checks
+                        //                    tr
+                        //                        td 5 Team members
+                        //                    tr
+                        //                        td 8 regions
+                        //                    tr
+                        //                        td 5 minute schedules
+                        //                    tr
+                        //                        td Email, webhook and <br> Slack integration
+                        //
+                        //        // Growth
+                        //
+                        //        .card.border-0
+                        //            .card-block
+                        //                table.table.plans-features-table
+                        //                    tr
+                        //                        td 40 API checks
+                        //                    tr
+                        //                        td 15 Browser checks
+                        //                    tr
+                        //                        td 10 Team members
+                        //                    tr
+                        //                        td 8 regions
+                        //                    tr
+                        //                        td 5 minute schedules
+                        //                    tr
+                        //                        td Email, webhook and <br> Slack integration
+                        //
+                        //        // Business
+                        //
+                        //        .card.border-0
+                        //            .card-block
+                        //                table.table.plans-features-table
+                        //                    tr
+                        //                        td 100 API checks
+                        //                    tr
+                        //                        td 30 Browser checks
+                        //                    tr
+                        //                        td 20 Team members
+                        //                    tr
+                        //                        td 8 regions
+                        //                    tr
+                        //                        td 5 minute schedules
+                        //                    tr
+                        //                        td Email, webhook and <br> Slack integration
 
                 .row
                     .col-sm-12.text-center
