--- a/src/scss/_plans.scss
+++ b/src/scss/_plans.scss
@@ -1,31 +1,12 @@
 .plans {
 
-  .plans-header {
-    text-align: center;
-    height: 110px;
-  }
-
-  .plans-card {
-    padding: 1rem 0;
-    border-radius: 8px;
-    margin-bottom: 1rem;
-    border-color: $gray-light;
-    border: 0;
-
-    .card-header {
-      padding-bottom: 0;
-    }
-
-    .car-block {
-      padding: 1rem 1rem 0 1rem;
-    }
-
-    .table {
-      tr {
-        text-align: center;
+  table.plans-features-table {
+    tbody {
+      tr:first-child td {
+        border-top: none;
       }
       td {
-        padding: .75rem;
+        padding-left: 0;
       }
     }
   }
@@ -42,7 +23,7 @@
       color: $gray-dark;
     }
     .price {
-      font-size: 2.5rem;
+      font-size: 3rem;
       margin-right: .2rem;
       color: $gray-dark;
     }
