fix(fixes dodgy navbar):

--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -1,5 +1,5 @@
-nav.navbar.navbar-toggleable-sm.fixed-top
-    .container.w-100
+nav.navbar.navbar-toggleable-md.fixed-top
+    .container
         button.navbar-toggler.navbar-toggler-right(type='button' data-toggle='collapse' data-target='#navbarSupportedContent')
           span
           span
