docs: adds docs on teams

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -18,6 +18,8 @@ footer.footer
                     h6 Company
                     ul
                         li
+                            a(href='/whats-new') News
+                        li
                             a(href='/support') Support
                         li
                             a(href='/privacy') Privacy policy
