--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -10,7 +10,7 @@ body
                         p Find the perfect plan — 100% satisfaction guaranteed 🍍
                 .row
                     .col-sm-4
-                        .card.p-3.mb-3.mb-md-0
+                        .card.p-3.mb-3.mb-md-0.card-starter
                             .card-block
                                 h2.text-accent Starter
                                 .price-block
@@ -33,9 +33,13 @@ body
                                     tr
                                         td 5 minute schedules
                                     tr
+                                        td 1 public dashboard
+                                    tr
                                         td Email, webhook and <br> Slack integration
+                                    tr
+                                        td Weekly summary email
                     .col-sm-4
-                        .card.p-3.mb-3.mb-md-0
+                        .card.p-3.mb-3.mb-md-0.card-growth
                             .card-block
                                 h2.text-success Growth
                                 .price-block
@@ -58,9 +62,13 @@ body
                                     tr
                                         td 5 minute schedules
                                     tr
+                                        td 1 public dashboard
+                                    tr
                                         td Email, webhook and <br> Slack integration
+                                    tr
+                                        td Weekly summary email
                     .col-sm-4
-                        .card.p-3.mb-3.mb-md-0
+                        .card.p-3.mb-3.mb-md-0.card-business
                             .card-block
                                 h2.text-primary Business
                                 .price-block
@@ -83,64 +91,11 @@ body
                                     tr
                                         td 5 minute schedules
                                     tr
+                                        td 1 public dashboard
+                                    tr
                                         td Email, webhook and <br> Slack integration
-
-                        //.d-block
-                        //    .card-deck
-                        //
-                        //        // Starter
-                        //
-                        //        .card.border-0
-                        //            .card-block
-                        //                table.table.plans-features-table
-                        //                    tr
-                        //                        td 15 API checks
-                        //                    tr
-                        //                        td 5 Browser checks
-                        //                    tr
-                        //                        td 5 Team members
-                        //                    tr
-                        //                        td 8 regions
-                        //                    tr
-                        //                        td 5 minute schedules
-                        //                    tr
-                        //                        td Email, webhook and <br> Slack integration
-                        //
-                        //        // Growth
-                        //
-                        //        .card.border-0
-                        //            .card-block
-                        //                table.table.plans-features-table
-                        //                    tr
-                        //                        td 40 API checks
-                        //                    tr
-                        //                        td 15 Browser checks
-                        //                    tr
-                        //                        td 10 Team members
-                        //                    tr
-                        //                        td 8 regions
-                        //                    tr
-                        //                        td 5 minute schedules
-                        //                    tr
-                        //                        td Email, webhook and <br> Slack integration
-                        //
-                        //        // Business
-                        //
-                        //        .card.border-0
-                        //            .card-block
-                        //                table.table.plans-features-table
-                        //                    tr
-                        //                        td 100 API checks
-                        //                    tr
-                        //                        td 30 Browser checks
-                        //                    tr
-                        //                        td 20 Team members
-                        //                    tr
-                        //                        td 8 regions
-                        //                    tr
-                        //                        td 5 minute schedules
-                        //                    tr
-                        //                        td Email, webhook and <br> Slack integration
+                                    tr
+                                        td Weekly summary email
 
                 .row
                     .col-sm-12.text-center
