--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -1,5 +1,5 @@
 .article {
-  margin-bottom: 3 * $spacer;
+  margin-bottom: 4 * $spacer;
   a {
     h1, h2, h3, h4, h5 {
       color: $body-color;
@@ -9,7 +9,7 @@
   .article-header {
     .article-title {
       font-size: $font-size-h3;
-      margin-bottom: 0.5 * $spacer;
+      margin-bottom: $spacer;
     }
     .article-sub {
       color: $text-muted;
