feat(testimonials): WIP: adds 1st testimonial

--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -7,6 +7,7 @@ body
             include partials/browser-check-section.pug
             include partials/api-check-section.pug
             include partials/features-section.pug
+            include partials/testimonial-1
             include partials/public-stats-section.pug
             include partials/free-trial.pug
 
