--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import 'sidebar-menu';
 @import 'landing';
 @import 'free-trial';
+@import 'testimonials';
 @import 'footer';
 @import 'plans';
 @import 'docs';
