--- a/src/scss/_testimonials.scss
+++ b/src/scss/_testimonials.scss
@@ -1,9 +1,8 @@
 .testimonial {
-  //background: $light-blue;
+  background: $light-blue;
   padding: 5 * $spacer-y 0;
   &.testimonial-1 {
     .testimonial-card {
-      @include screen-shadow();
       border-top: 6px solid #ffde47;
       border-bottom: none;
       border-left: none;
