style(pricing): restyle

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -13,93 +13,63 @@ body
                         .card.p-3.mb-3.mb-md-0.card-starter
                             .card-block
                                 h2.text-accent Starter
-                                .price-block
-                                    span.dollar-sign $
-                                    span.price 15
-                                    | / month
-                                p.py-3 Start actively monitoring your site, api's and mobile back end. Add up to 5 team mates.
-                                a.btn.btn-outline-success.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
-                        .card.border-0
-                            .card-block
-                                table.table.plans-features-table
+                                //p.py-3 Start actively monitoring your site, api's and mobile back end. Add up to 5 team mates.
+                                table.table.table-sm.plans-features-table
                                     tr
                                         td 15 API checks
                                     tr
                                         td 5 Browser checks
                                     tr
                                         td 5 Team members
-                                    tr
-                                        td 8 regions
-                                    tr
-                                        td 5 minute schedules
-                                    tr
-                                        td 1 public dashboard
-                                    tr
-                                        td Email, webhook and <br> Slack integration
-                                    tr
-                                        td Weekly summary email
-                    .col-sm-4
-                        .card.p-3.mb-3.mb-md-0.card-growth
-                            .card-block
-                                h2.text-success Growth
                                 .price-block
                                     span.dollar-sign $
-                                    span.price 40
+                                    span.price 15
                                     | / month
-                                p.py-3  More checks and more team mates for growing companies with multiple services and API's.
-                                a.btn.btn-outline-success.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
-                        .card.border-0
+                                a.btn.btn-outline-primary.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
+                    .col-sm-4
+                        .card.p-3.mb-3.mb-md-0.card-growth.big-drop-shadow
                             .card-block
-                                table.table.plans-features-table
+                                h2.text-success Growth
+                                table.table.table-sm.plans-features-table
                                     tr
                                         td 40 API checks
                                     tr
                                         td 15 Browser checks
                                     tr
                                         td 10 Team members
-                                    tr
-                                        td 8 regions
-                                    tr
-                                        td 5 minute schedules
-                                    tr
-                                        td 1 public dashboard
-                                    tr
-                                        td Email, webhook and <br> Slack integration
-                                    tr
-                                        td Weekly summary email
+                                .price-block
+                                    span.dollar-sign $
+                                    span.price 40
+                                    | / month
+                                a.btn.btn-success.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
                     .col-sm-4
                         .card.p-3.mb-3.mb-md-0.card-business
                             .card-block
                                 h2.text-primary Business
-                                .price-block
-                                    span.dollar-sign $
-                                    span.price 80
-                                    | / month
-                                p.py-3  For businesses with extensive API landscapes and many key online transactions.
-                                a.btn.btn-outline-success.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
-                        .card.border-0
-                            .card-block
-                                table.table.plans-features-table
+
+                                table.table.table-sm.plans-features-table
                                     tr
                                         td 100 API checks
                                     tr
                                         td 30 Browser checks
                                     tr
                                         td 20 Team members
-                                    tr
-                                        td 8 regions
-                                    tr
-                                        td 5 minute schedules
-                                    tr
-                                        td 1 public dashboard
-                                    tr
-                                        td Email, webhook and <br> Slack integration
-                                    tr
-                                        td Weekly summary email
-
-                .row
-                    .col-sm-12.text-center
-                        p.py-3 Don't see a plan that works for you? Contact us at info@checklyhq.com
+                                .price-block
+                                    span.dollar-sign $
+                                    span.price 80
+                                    | / month
+                                a.btn.btn-outline-primary.btn-block(href='https://app.checklyhq.com/signup') Start your free trial
+                .row.pt-5
+                    .col-sm-12
+                        .text-center
+                            h5 Every plan comes with
+                        .text-center
+                            ul.list-inline.plans-features-common-list
+                                li.list-inline-item 8 regions
+                                li.list-inline-item 5 minute schedules
+                                li.list-inline-item 1 public dashboard
+                                li.list-inline-item Email, webhook and Slack integration
+                                li.list-inline-item Weekly summary email
                 .row
                     .col-sm-12.text-center
                         h2.py-5 Pricing FAQ
