--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import '../../../checkly-webapp/src/style/scss/style.scss';
 @import '../../node_modules/highlight.js/styles/monokai-sublime.css';
 
+@import 'common';
 @import 'main';
 @import 'navbar';
 @import 'sidebar-menu';
