docs(pricing): copy

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -5,15 +5,17 @@ body
         .plans.py-5
             .container
                 .row
-                    .col-sm-12.plans-header.text-center.mb-3
-                        h2 Simple, fair pricing
-                        p Find the perfect plan — 100% satisfaction guaranteed 🍍
+                    .col-sm-12.col-md-8.offset-md-2.plans-header.text-center.mb-4
+                        h2 Simple, fair pricing 🍍
+                        p.py-4
+                            | Checkly has plans for companies at any level, from small startups to corporates. Didn't
+                            | find a plan that matches your needs? Just <a href="mailto:info@checklyhq.com">send an email</a> and we'll cook
+                            | up something tailor made.
                 .row
                     .col-sm-4
                         .card.p-3.mb-3.mb-md-0.card-starter
                             .card-block
                                 h2.text-accent Starter
-                                //p.py-3 Start actively monitoring your site, api's and mobile back end. Add up to 5 team mates.
                                 table.table.table-sm.plans-features-table
                                     tr
                                         td 15 API checks
