style(pricing): update

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -64,7 +64,7 @@ body
                 .row.pt-5
                     .col-sm-12
                         .text-center
-                            h5 Every plan comes with
+                            p Every plan comes with
                         .text-center
                             ul.list-inline.plans-features-common-list
                                 li.list-inline-item 8 regions
