feat(lading): adds testimonial #1

--- a/src/layouts/index.pug
+++ b/src/layouts/index.pug
@@ -7,7 +7,6 @@ body
             include partials/browser-check-section.pug
             include partials/api-check-section.pug
             include partials/features-section.pug
+            include partials/testimonial-trial-row.pug
             include partials/public-stats-section.pug
-            include partials/free-trial.pug
-
     include partials/footer.pug
