--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -80,5 +80,5 @@ body
                     .col-sm-6.markdown.text-left #{'{{ . | markdownify }}'}
                     | !{'{{end}}'}
 
-    include ../partials/free-trial.pug
+    include ../partials/free-trial-row
     include ../partials/footer.pug
