--- a/src/layouts/partials/public-stats-section.pug
+++ b/src/layouts/partials/public-stats-section.pug
@@ -3,9 +3,7 @@ section.public-stats-section
     .row
       .col-sm-12.text-center
         .counter-text We ran
-          //span.counter ${publicStats.apiCheckResults}
-          span.counter 123131313
+          span.counter ${publicStats.apiCheckResults}
           | API checks and
-          //span.counter ${publicStats.browserCheckResults}
-          span.counter 2313131
+          span.counter ${publicStats.browserCheckResults}
           | Browser checks with 💖
