feat: adds live dash

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -12,6 +12,8 @@ footer.footer
                             a(href='/pricing') Pricing
                         li
                             a(href='/docs') Docs
+                        li
+                            a(href='https://app.checklyhq.com/dashboards/156857db-af48-432e-8c54-6ac681bfe5c5' target='_blank') Live dashboard
 
             .col-sm-2
                 .mb-3.mb-md-0
