--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -14,6 +14,8 @@ nav.navbar.navbar-toggleable-md.fixed-top
             li.nav-item
               a.nav-link(href='/docs') Docs
             li.nav-item
+                a.nav-link(href='https://app.checklyhq.com/dashboards/156857db-af48-432e-8c54-6ac681bfe5c5' target='_blank') Live dashboard
+            li.nav-item
               a.nav-link(href='/whats-new') What's new
           form.form-inline.my-2.my-lg-0.ml-md-3
             a.btn.btn-outline-secondary.my-2.my-sm-0.mr-3.ml-md-3(href='https://app.checklyhq.com/') Log in
