feat: add SSL checks

--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -70,6 +70,7 @@ body
                                 li.list-inline-item 8 regions
                                 li.list-inline-item 5 minute schedules
                                 li.list-inline-item 1 public dashboard
+                                li.list-inline-item SSL expiration checks
                                 li.list-inline-item Email, webhook and Slack integration
                                 li.list-inline-item Weekly summary email
                 .row
