--- a/src/layouts/pricing/list.pug
+++ b/src/layouts/pricing/list.pug
@@ -68,7 +68,7 @@ body
                         .text-center
                             ul.list-inline.plans-features-common-list
                                 li.list-inline-item 8 regions
-                                li.list-inline-item 5 minute schedules
+                                li.list-inline-item 1 minute intervals for API checks / 5 minute intervals for Browser checks
                                 li.list-inline-item 1 public dashboard
                                 li.list-inline-item SSL expiration checks
                                 li.list-inline-item Email, webhook and Slack integration
