--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -1,21 +1,14 @@
 section.hero-section
   .container
     .row
-      .col-sm-12.text-center
+      .col-sm-12.col-md-8.offset-md-2.text-center
         h1.hero-text Active monitoring <br> for dev and ops teams
-    .row
-      .col-sm-12.col-md-8.offset-md-2
-        .text-center
-          h2.hero-sub
-            | Checkly is the easiest way to actively monitor your API endpoints and Browser click flows
-            | from a single dashboard.
-    .row
-      .col-sm-12
-        .text-center
-          a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start a free trial
+        h2.hero-sub
+          | Checkly is the easiest way to actively monitor your API endpoints and Browser click flow
+          | from a single dashboard.
+        a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start a free trial
         .text-center.pt-2.text-muted.mb-4
-            small up and running in seconds - no credit card required
+          small up in seconds, no credit card required
     .row
-      .col-sm-12
-        .text-center
+      .col-sm-12.text-center
           img.hero-image.img-fluid(src='/images/dashboard-screen@2x.png')
