feat(dashboards): updates link

--- a/src/layouts/partials/footer.pug
+++ b/src/layouts/partials/footer.pug
@@ -13,7 +13,7 @@ footer.footer
                         li
                             a(href='/docs') Docs
                         li
-                            a(href='https://app.checklyhq.com/dashboards/156857db-af48-432e-8c54-6ac681bfe5c5' target='_blank') Live dashboard
+                            a(href='https://status.checklyhq.com/' target='_blank') Live dashboard
 
             .col-sm-2
                 .mb-3.mb-md-0
