--- a/src/layouts/partials/navbar.pug
+++ b/src/layouts/partials/navbar.pug
@@ -14,7 +14,7 @@ nav.navbar.navbar-toggleable-md.fixed-top
             li.nav-item
               a.nav-link(href='/docs') Docs
             li.nav-item
-                a.nav-link(href='https://app.checklyhq.com/dashboards/156857db-af48-432e-8c54-6ac681bfe5c5' target='_blank') Live dashboard
+                a.nav-link(href='https://status.checklyhq.com/' target='_blank') Live dashboard
             li.nav-item
               a.nav-link(href='/whats-new') What's new
           form.form-inline.my-2.my-lg-0.ml-md-3
