fix: unify copy on CTA

--- a/src/layouts/partials/hero-section.pug
+++ b/src/layouts/partials/hero-section.pug
@@ -6,7 +6,7 @@ section.hero-section
         h2.hero-sub
           | Checkly is the easiest way to actively monitor your API endpoints and Browser click flow
           | from a single dashboard.
-        a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start a free trial
+        a.btn.btn-success.btn-lg(href='https://app.checklyhq.com/signup') Start your free trial
         .text-center.pt-2.text-muted.mb-4
           small up in seconds, no credit card required
     .row
